# download-youtube

./: .cursorignore  .cursorrules  .gitignore  LICENSE  README.md  app.py  build.bat  build.sh  pyproject.toml  pyrightconfig.json  requirements.txt  test.py
docs/locale/en/: README.en.md
docs/locale/vi/: README.vi.md
src/: __init__.py  app.py
src/assets/images/: DiuTupDownloaderByPaulPham157.icns
src/classes/: DiuTipDownloaderApp.py  DiuTupDownloaderApp.py  DownloaderThread.py  Messages.py  SplashScreen.py  Utils.py  __init__.py
src/classes/languages/: __init__.py
src/classes/languages/ar/: Messages.py  __init__.py
src/classes/languages/bn/: Messages.py  __init__.py
src/classes/languages/de/: Messages.py  __init__.py
src/classes/languages/en/: Messages.py  __init__.py
src/classes/languages/es/: Messages.py  __init__.py
src/classes/languages/fr/: Messages.py  __init__.py
src/classes/languages/hi/: Messages.py  __init__.py
src/classes/languages/pt/: Messages.py  __init__.py
src/classes/languages/ru/: Messages.py  __init__.py
src/classes/languages/vi/: Messages.py  __init__.py
src/classes/languages/zh/: Messages.py  __init__.py
src/docs/locale/ar/: README.ar.md
src/docs/locale/bn/: README.bn.md
src/docs/locale/de/: README.de.md
src/docs/locale/en/: README.en.md
src/docs/locale/es/: README.es.md
src/docs/locale/fr/: README.fr.md
src/docs/locale/hi/: README.hi.md
src/docs/locale/pt/: README.pt.md
src/docs/locale/ru/: README.ru.md
src/docs/locale/vi/: README.vi.md
src/docs/locale/zh/: README.zh.md
